<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/bt_triangulo_perimetro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/triangulo_per" />

    <Button
        android:id="@+id/bt_triangulo_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/triangulo_area" />

    <Button
        android:id="@+id/bt_cuadro_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuadro_area" />

    <Button
        android:id="@+id/bt_cuadro_perimetro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuadro_per" />

    <Button
        android:id="@+id/bt_rect_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rectangulo_area" />

    <Button
        android:id="@+id/bt_rect_per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rectangulo_per" />

    <Button
        android:id="@+id/bt_circulo_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circulo_area" />

    <Button
        android:id="@+id/bt_circulo_per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/circulo_perimetro" />

    <Button
        android:id="@+id/bt_rombo_area"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rombo_area" />

    <Button
        android:id="@+id/bt_rombo_per"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rombo_perimetro" />

</TableLayout>