<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PerimetroRectanguloActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/title_rectangulo"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textlargo"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/et_largorectangulo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/ingrese_largo"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDarkR"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/textancho"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/et_anchorectangulo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/ingrese_ancho"
                android:inputType="number"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDarkR"
                android:textSize="20sp"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TextView
                android:id="@+id/et_perimetrorectangulo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:hint="@string/perimetrorect"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDarkR"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/bt_perimetrorectangulo"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/colorAccentR"
                android:text="@string/hallar_perimetrorectangulo"
                android:textSize="30sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>
</LinearLayout>