<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AreaCirculoActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/area_del_circulo"
        android:textColor="@color/pink"
        android:textStyle="bold"
        android:textSize="30dp"
        android:gravity="center"
        android:layout_margin="5sp">
    </TextView>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/circulo">
    </ImageView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/ingrese_el_radio_del_circulo"
        android:layout_gravity="center"
        android:id="@+id/et_radio"
        android:inputType="number">
    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcular_rea"
        android:id="@+id/bt_calcular">
    </Button>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/resultado"
        android:textColor="@color/black"
        android:textSize="20dp">
    </TextView>
</LinearLayout>